# kurima-portal

./: .env.clickpost.example  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  setup.bat  update.bat
docs/: access_analytics_billing_cards_design.md  access_analytics_billing_cards_requirements.md  access_analytics_billing_cards_ui_design_prompt.md  claude-code-perf-handoff.md  claude-code-ui-redesign-brief.md  execution-debug-logging-design.md  improvement-ideas.md  requirements_implementation_gap_audit.md
docs/agent/: LOOP_DESIGN_PROPOSAL.md  LOOP_REQUIREMENTS.md
portal_app/: __init__.py  cli.py  env.py  log_paths.py  main.py  settings.py
scripts/: build_eval_package.py  check_goal_completion.py  check_inventory.ps1  doctor.py  hold_b2_login.py  record_eval.py  register_autostart.bat  restart.bat  restart.vbs  restart_serve.vbs  run_loop_evaluator.py  run_loop_generator.py  serve.ps1  smoke_test_eval_loop.py  validate_equivalence.py  validate_eval_schema.py  watchdog.ps1
tests/: test_access_analytics_billing_validators.py  test_error_hints.py  test_inventory_combined.py  test_letterpack_tracking.py  test_log_paths.py  test_log_retention.py  test_nekopos_profile.py  test_order_status_options.py  test_price_calc.py  test_price_calc_paste.py  test_progress_jobs_guard.py  test_saved_result_manifest.py  test_shipment_confirmation.py  test_shipment_upload_candidate.py  test_timeout_settings.py  test_yahoo_login_form_wait.py  test_yamato_conversion.py  test_yamato_delivery_date.py
validation/: equivalence.yaml
(+57 files in other folders)
